--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -1,4 +1,14 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-Sorry, nothing to see here yet.
+
+<html>
+<head>
+<title>
+ApexZero Beta
+</title>
+</head>
+<body>
+Dev page
+</body>
+</html>
