Misc design progress

--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -1,14 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Landing";
+    String temp_banner = "This site is currently under development...";
 }
 
-<html>
-<head>
-<title>
-ApexZero Beta
-</title>
-</head>
-<body>
-Dev page
-</body>
-</html>
+<p>
+@temp_banner
