--- a/ApexZero.com/Views/Shared/_Layout.cshtml
+++ b/ApexZero.com/Views/Shared/_Layout.cshtml
@@ -2,21 +2,22 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="/Content/PsychOfSleep/styles/layout.css" type="text/css" />
     <title>@ViewBag.Title</title>
-    @RenderSection("pos", false);
-    <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")"></script>
-    <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")"></script>
 </head>
-<body>
-    <ul id="menu">
-        <li>@Html.ActionLink("Home","Index","Home")</li>
-        <li>@Html.ActionLink("Movies","Index","Movies")</li>
-        <li>@Html.ActionLink("About","About","Home")</li>
-    </ul>
+<body id="top">
+    <div class="wrapper col0">
+        <div id="topline">
+            <p>Apex Zero | Mail: it@apexzero.com</p>
+            <ul>
+                <li>@Html.ActionLink("Home","Index","Home")</li>
+                <li>@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
+            </ul>
+            <br class="clear" />
+        </div>
+    </div>
     <section id="main">
         @RenderBody()
-        <p>Copyright W3schools 2012. All Rights Reserved.</p>
     </section>
 </body>
 </html>
