--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Landing";
+    ViewBag.Title = "Apex Zero";
     String temp_banner = "This site is currently under development...";
 }
 
