--- a/ApexZero.com/Views/Shared/_Layout.cshtml
+++ b/ApexZero.com/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
 <body id="top">
     <div class="wrapper col0">
         <div id="topline">
-            <p>Apex Zero | Mail: it@apexzero.com</p>
+            <p>Apex Zero | it@apexzero.com</p>
             <ul>
                 <li>@Html.ActionLink("Home","Index","Home")</li>
                 <li>@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
