--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -1,7 +1,11 @@
-﻿@{
-    ViewBag.Title = "Apex Zero";
-    String temp_banner = "This site is currently under development...";
+﻿
+@section body {
+    <p>
+    @ViewBag.MOTD
+    </p>   
 }
 
-<p>
-@temp_banner
+@section menu {
+    <li>@Html.ActionLink("Home","Index","Home")</li>
+    <li class="last">@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
+}
