--- a/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Psychology of Sleep";    
 }
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="EN" lang="EN" dir="ltr">
-<head>
+
+@section _head {
     <script type="text/javascript" src="/Content/PsychOfSleep/scripts/jquery-1.4.1.min.js"></script>
     <script type="text/javascript" src="/Content/PsychOfSleep/scripts/jquery.easing.1.3.js"></script>
     <script type="text/javascript" src="/Content/PsychOfSleep/scripts/jquery.timers.1.2.js"></script>
@@ -11,52 +11,30 @@
     <script type="text/javascript" src="/Content/PsychOfSleep/scripts/jquery.galleryview.setup.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="imagetoolbar" content="no" />
-    <title>@Page.Title @ViewBag.Title</title>
-    <link rel="stylesheet" href="/Content/PsychOfSleep/styles/layout.css" type="text/css" />
-    @RenderSection("head",required :false)
-    </head>
+    @RenderSection("_head",required : false)
+}
+                    
+@section menu {
+    <li class="last">@Html.ActionLink("Home","Index","Home")</li>
+    @RenderSection("menu",false)
+}
 
-<body id="top">
-    <div class="wrapper col0">
-        <div id="topline">
-            <p>Apex Zero | Mail: it@apexzero.com</p>
-            <ul>
-                <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                <li><a href="#">Link2</a></li>
-                <li><a href="#">Link3</a></li>
-                <li class="last"><a href="#">End</a></li>
-            </ul>
-            <br class="clear" />
-        </div>
-    </div>
-    <!-- ####################################################################################################### -->
+@section body {    
+    @RenderSection("bread_crumbs",false)
     <div class="wrapper">
         <div id="header">
             <div class="fl_left">
-                <h1><a href="#"><strong>S</strong>eep <strong>R</strong>esource</a></h1>
-                <p>More in-depth on the effects of sleep.</p>
+                @RenderSection("page_title",false)
             </div>
             <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/demo/468x60.gif" alt="" /></a></div>
             <br class="clear" />
         </div>
     </div>
-    <!-- ####################################################################################################### -->
     <div class="wrapper col2">
         <div id="topbar">
             <div id="topnav">
                 <ul>
-                    <li>@Html.ActionLink("Sleep Home","Index","PsychOfSleep")</li>
-                    <li>@Html.ActionLink("Style Demo","StyleDemo","PsychOfSleep")</li>
-                    <li>@Html.ActionLink("Full Width","FW","PsychOfSleep")</li>
-                    <li>
-                        <a href="#">DropDown</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                            <li><a href="#">Link 3</a></li>
-                        </ul>
-                    </li>
-                    <li class="last"><a href="#">A Long Link Text</a></li>
+                    @RenderSection("nav",false)
                 </ul>
             </div>
             <div id="search">
@@ -71,44 +49,34 @@
             <br class="clear" />
         </div>
     </div>
-    @RenderBody()
+    @RenderSection("inner_body", false)
+}
 
-    <!-- ####################################################################################################### -->
-    <div class="wrapper">
-        <div id="socialise">
-            <ul>
-                <li><a href="#"><img src="/Content/PsychOfSleep/images/facebook.gif" alt="" /><span>Facebook</span></a></li>
-                <li><a href="#"><img src="/Content/PsychOfSleep/images/rss.gif" alt="" /><span>FeedBurner</span></a></li>
-                <li class="last"><a href="#"><img src="images/twitter.gif" alt="" /><span>Twitter</span></a></li>
-            </ul>
-            <div id="newsletter">
-                <h2>NewsLetter Sign Up !</h2>
-                <p>Please enter your Email and Name to join.</p>
-                <form action="#" method="post">
-                    <fieldset>
-                        <legend>Digital Newsletter</legend>
-                        <div class="fl_left">
-                            <input type="text" value="Enter name here&hellip;" onfocus="this.value=(this.value=='Enter name here&hellip;')? '' : this.value ;" />
-                            <input type="text" value="Enter email address&hellip;" onfocus="this.value=(this.value=='Enter email address&hellip;')? '' : this.value ;" />
-                        </div>
-                        <div class="fl_right">
-                            <input type="submit" name="newsletter_go" id="newsletter_go" value="&raquo;" />
-                        </div>
-                    </fieldset>
-                </form>
-                <p>To unsubsribe please <a href="#">click here &raquo;</a>.</p>
-            </div>
-            <br class="clear" />
+@section footer {
+    <div id="socialise">
+        <ul>
+            <li><a href="#"><img src="/Content/PsychOfSleep/images/facebook.gif" alt="" /><span>Facebook</span></a></li>
+            <li><a href="#"><img src="/Content/PsychOfSleep/images/rss.gif" alt="" /><span>FeedBurner</span></a></li>
+            <li class="last"><a href="#"><img src="images/twitter.gif" alt="" /><span>Twitter</span></a></li>
+        </ul>
+        <div id="newsletter">
+            <h2>NewsLetter Sign Up !</h2>
+            <p>Please enter your Email and Name to join.</p>
+            <form action="#" method="post">
+                <fieldset>
+                    <legend>Digital Newsletter</legend>
+                    <div class="fl_left">
+                        <input type="text" value="Enter name here&hellip;" onfocus="this.value=(this.value=='Enter name here&hellip;')? '' : this.value ;" />
+                        <input type="text" value="Enter email address&hellip;" onfocus="this.value=(this.value=='Enter email address&hellip;')? '' : this.value ;" />
+                    </div>
+                    <div class="fl_right">
+                        <input type="submit" name="newsletter_go" id="newsletter_go" value="&raquo;" />
+                    </div>
+                </fieldset>
+            </form>
+            <p>To unsubsribe please <a href="#">click here &raquo;</a>.</p>
         </div>
+        <br class="clear" />
     </div>
-    <!-- ####################################################################################################### -->
-    <div class="wrapper col8">
-        <div id="copyright">
-            <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Apex Zero</a></p>
-            <p class="fl_right">Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-            <br class="clear" />
-        </div>
-    </div>
-
-</body>
-</html>
+    }
+@RenderBody()
