--- a/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
@@ -1,8 +1,27 @@
 @{
-    Layout = "/Views/PsychOfSleep/Layout.cshtml";
+    Layout = ViewBag.Layout;
     Page.Title = "Style Demo - ";    
 }
 
+@section bread_crumbs {
+    <div class="wrapper">
+        <div id="breadcrumb">
+            <ul>
+                <li class="first">You Are Here</li>
+                <li>&#187;</li>
+                <li><a href="#">Home</a></li>
+                <li>&#187;</li>
+                <li><a href="#">Grand Parent</a></li>
+                <li>&#187;</li>
+                <li><a href="#">Parent</a></li>
+                <li>&#187;</li>
+                <li class="current"><a href="#">Child</a></li>
+            </ul>
+        </div>
+    </div>
+}
+
+@section inner_body {
 <!-- ####################################################################################################### -->
 <div class="wrapper">
   <div id="breadcrumb">
@@ -235,3 +254,5 @@
     <br class="clear" />
   </div>
 </div>
+
+}
