Added some pictures

--- a/ApexZero.com/Views/PsychOfSleep/FW.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/FW.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section bread_crumbs {
-    <div class="wrapper">
+    <!-- <div class="wrapper">
         <div id="breadcrumb">
             <ul>
                 <li class="first">You Are Here</li>
@@ -18,7 +18,7 @@
                 <li class="current"><a href="#">Child</a></li>
             </ul>
         </div>
-    </div>
+    </div> -->
 }
 
 @section page_title_override {
