--- a/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/Layout.cshtml
@@ -26,7 +26,7 @@
             <div class="fl_left">
                 @RenderSection("page_title",false)
             </div>
-            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/demo/468x60.gif" alt="" /></a></div>
+            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/ss1.png" alt="" /></a></div>
             <br class="clear" />
         </div>
     </div>
@@ -59,6 +59,7 @@
             <li><a href="#"><img src="/Content/PsychOfSleep/images/rss.gif" alt="" /><span>FeedBurner</span></a></li>
             <li class="last"><a href="#"><img src="images/twitter.gif" alt="" /><span>Twitter</span></a></li>
         </ul>
+        <!--
         <div id="newsletter">
             <h2>NewsLetter Sign Up !</h2>
             <p>Please enter your Email and Name to join.</p>
@@ -75,7 +76,7 @@
                 </fieldset>
             </form>
             <p>To unsubsribe please <a href="#">click here &raquo;</a>.</p>
-        </div>
+        </div> -->
         <br class="clear" />
     </div>
     }
