--- a/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
@@ -4,10 +4,10 @@
 
 @section nav {
     <li>@Html.ActionLink("Sleep Home","Index","PsychOfSleep")</li>
-    <li>@Html.ActionLink("Style Demo","StyleDemo","PsychOfSleep")</li>
-    <li>@Html.ActionLink("Full Width","FW","PsychOfSleep")</li>
+    <li>@Html.ActionLink("Sub_1","StyleDemo","PsychOfSleep")</li>
+    <li>@Html.ActionLink("Sub_2","FW","PsychOfSleep")</li>
     <li class="last">
-        <a href="#">Other</a>
+        <a href="#">Sub_3</a>
         <ul>
             <li class="last"><a href="#">Not implemented</a></li>
         </ul>
