--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -5,7 +5,14 @@
     </p>   
 }
 
-@section menu {
-    <li>@Html.ActionLink("Home","Index","Home")</li>
-    <li class="last">@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
+
+@if(ViewBag.Auth) {
+    @section menu {
+        <li>@Html.ActionLink("Home","Index","Home")</li>
+        <li class="last">@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
+    }
+} else {
+    @section menu {
+        <li class="last">@Html.ActionLink("Home","Index","Home")</li>
+    }
 }
