--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -45,8 +45,8 @@
 
     <div class="wrapper">
         <div id="adblock">
-            <div class="fl_left"><a href="#"><img src="/Content/PsychOfSleep/images/demo/468x60.gif" alt="" /></a></div>
-            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/demo/468x60.gif" alt="" /></a></div>
+            <div class="fl_left"><a href="#"><img src="/Content/PsychOfSleep/images/ss2.jpg" alt="" /></a></div>
+            <div class="fl_right"><a href="#"><img src="/Content/PsychOfSleep/images/ss3.jpg" alt="" /></a></div>
             <br class="clear" />
         </div>
         <div id="hpage_cats">
@@ -87,8 +87,8 @@
                 </div>
             </div>
             <div class="column">
-                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/demo/300x250.gif" alt="" /></a></div>
-                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/demo/300x80.gif" alt="" /></a></div>
+                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/ss4.jpg" alt="" /></a></div>
+                <div class="holder"><a href="#"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a></div>
             </div>
             <br class="clear" />
         </div>
