Working on populating content

--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="content">
                 <div id="hpage_latest">
-                    <h2>Feugiatrutrum rhoncus semper</h2>
+                    <h2>Some non-english words were here.</h2>
                     <ul>
                         <li>
                             @RenderSection("sec_art_1", false)
@@ -96,31 +96,31 @@
     <div class="wrapper">
         <div id="footer">
             <div class="footbox">
-                <h2>Lacus interdum</h2>
+                <h2>Heading for links</h2>
                 <ul>
                     @RenderSection("footnote_1", false)
                 </ul>
             </div>
             <div class="footbox">
-                <h2>Lacus interdum</h2>
+                <h2>Heading for links</h2>
                 <ul>
                     @RenderSection("footnote_2",false)
                 </ul>
             </div>
             <div class="footbox">
-                <h2>Lacus interdum</h2>
+                <h2>Heading for links</h2
                 <ul>
                     @RenderSection("footnote_3",false)
                 </ul>
             </div>
             <div class="footbox">
-                <h2>Lacus interdum</h2>
+                <h2>Heading for links</h2>
                 <ul>
                     @RenderSection("footnote_4",false)
                 </ul>
             </div>
             <div class="footbox last">
-                <h2>Lacus interdum</h2>
+                <h2>Heading for links</h2
                 <ul>
                     @RenderSection("footnote_5",false)
                 </ul>
