--- a/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
@@ -4,14 +4,7 @@
 
 @section nav {
     <li>@Html.ActionLink("Sleep Home","Index","PsychOfSleep")</li>
-    <li>@Html.ActionLink("Sub_1","StyleDemo","PsychOfSleep")</li>
-    <li>@Html.ActionLink("Sub_2","FW","PsychOfSleep")</li>
-    <li class="last">
-        <a href="#">Sub_3</a>
-        <ul>
-            <li class="last"><a href="#">Not implemented</a></li>
-        </ul>
-    </li>
+    <li>@Html.ActionLink("Article Database","StyleDemo","PsychOfSleep")</li>
 }
 
 @section page_title {
