--- a/ApexZero.com/Content/PsychOfSleep/styles/layout.css
+++ b/ApexZero.com/Content/PsychOfSleep/styles/layout.css
@@ -12,13 +12,13 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 @import url(featured_slide.css);
 
 body{
-	margin:0;
-	padding:0;
-	font-size:13px;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	color:#666666;
-	background-color:#FFFFFF;
-	}
+    margin:0;
+    padding:0;
+    font-size:13px;
+    font-family:Georgia, "Times New Roman", Times, serif;
+    color:#666666;
+    background-color:#FFFFFF;
+    }
 
 img{display:block; margin:0; padding:0; border:none;}
 .justify{text-align:justify;}
@@ -41,20 +41,20 @@ a{outline:none; text-decoration:none; color:#059BD8; background-color:#FFFFFF;}
 /* ----------------------------------------------Wrapper-------------------------------------*/
 
 div.wrapper{
-	display:block;
-	width:100%;
-	margin:0;
-	text-align:left;
-	border-bottom:1px solid #E3E3E3;
-	}
+    display:block;
+    width:100%;
+    margin:0;
+    text-align:left;
+    border-bottom:1px solid #E3E3E3;
+    }
 
 div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{
-	margin:0 0 15px 0;
-	padding:0;
-	font-size:20px;
-	font-weight:normal;
-	line-height:normal;
-	}
+    margin:0 0 15px 0;
+    padding:0;
+    font-size:20px;
+    font-weight:normal;
+    line-height:normal;
+    }
 
 .col0, .col0 a{color:#FFFFFF; background-color:#666666;}
 .col2{color:#FFFFFF; background-color:#F6F6F6;}
@@ -62,116 +62,141 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 /* ----------------------------------------------Generalise-------------------------------------*/
 
 #header, #topline, #topbar, #breadcrumb, .container, #hpage_cats, #adblock, #socialise, #footer, #copyright{
-	position:relative;
-	margin:0 auto 0;
-	display:block;
-	width:960px;
-	}
+    position:relative;
+    margin:0 auto 0;
+    display:block;
+    width:960px;
+}
 
 /* ----------------------------------------------TopBar-------------------------------------*/
 
-#topline{
-	padding:10px 0;
-	}
+#topline {
+    padding:15px 0;
+}
+   
+#topline p {
+    float:left;
+    margin:0;
+    padding:0;
+}
 
-#topline p{
-	float:left;
-	margin:0;
-	padding:0;
-	}
+#topline ul {
+    text-align:left;
+    float:right;
+    display:inline;
+    margin:-15px;
+    padding:-5px 0px -5px 0;
+    list-style:none;
+    box-shadow: 0 0 5px rgba(0,0,0,0.15);
+    border:none;
+}
 
-#topline ul{
-	float:right;
-	margin:0;
-	padding:0;
-	list-style:none;
-	}
+#topline ul li {
+    display: block;
+    font:bold;
+    margin:0;
+    border:none;
+    margin-right: 0;
+    padding: 14px 14px;
+    -o-transition: all .2s;
+    transition: all .2s;
+    cursor: pointer;
+    background:#666666;
+}
 
-#topline li{
-	display:inline;
-	margin:0 8px 0 0;
-	padding:0 10px 0 0;
-	border-right:1px solid #999999;
-	}
+/* Change the background color of each list entry when we hover over it. */
+#topline ul li:hover {
+    background:#555;
+}
 
-#topline li.last{
-	margin-right:0;
-	padding-right:0;
-	border:none;
-	}
+/* Hide the submenu somewhere out of sight until we ask for it. */
+#topline li ul {
+    display:none;
+}
+
+/* Now reposition the submenu that we've hovered over it. */
+#topline li:hover ul {
+    display:block;
+    position:absolute;
+    width:200px;
+    left:89.8%;
+    top:135%;
+    z-index:2;
+}
+
 
 /* ----------------------------------------------Header-------------------------------------*/
 
 #header{
-	padding:2px 0 20px 0;
-	}
+    padding:2px 0 20px 0;
+    }
 
 #header .fl_left{
-	display:block;
-	float:left;
-	margin-top:7px;
-	overflow:hidden;
-	}
+    display:block;
+    float:left;
+    margin-top:7px;
+    overflow:hidden;
+    }
 
 #header .fl_right{
-	display:block;
-	float:right;
-	width:468px;
-	height:60px;
-	margin-top:21px;
-	overflow:hidden;
-	}
+    display:block;
+    float:right;
+    width:468px;
+    height:60px;
+    margin-top:21px;
+    overflow:hidden;
+    }
 
 #header h1, #header p, #header ul{
-	margin:0;
-	padding:0;
-	list-style:none;
-	line-height:normal;
-	}
+    margin:0;
+    padding:0;
+    list-style:none;
+    line-height:normal;
+    }
 
 #header h1 a{
-	font-size:46px;
-	color:#999999;
-	background-color:#FFFFFF;
-	}
+    font-size:46px;
+    color:#999999;
+    background-color:#FFFFFF;
+    }
 
 #header h1 strong{
-	font-weight:normal;
-	color:#059BD8;
-	background-color:#FFFFFF;
-	}
+    font-weight:normal;
+    color:#059BD8;
+    background-color:#FFFFFF;
+    }
 
 #header .fl_left p{
-	text-align:right;
-	margin-top:5px;
-	}
+    text-align:right;
+    margin-top:5px;
+    }
 
 /* ----------------------------------------------Topbar-------------------------------------*/
 
 #topbar{
-	padding:20px 0;
-	z-index:1000;
-	}
+    padding:20px 0;
+    z-index:1000;
+    }
 
 #topbar #search{
-	display:block;
-	float:right;
-	margin:0;
-	padding:0;
-	overflow:hidden;
-	}
+    display:block;
+    float:right;
+    margin:0;
+    padding:0;
+    overflow:hidden;
+    }
 
 /* ----------------------------------------------BreadCrumb-------------------------------------*/
 
 #breadcrumb{
-	padding:20px 0;
-	}
+    padding:20px 0;
+    }
 
 #breadcrumb ul{
-	margin:0;
-	padding:0;
-	list-style:none;
-	}
+    margin:0;
+    padding:0;
+    list-style:none;
+    }
 
 #breadcrumb ul li{display:inline;}
 #breadcrumb ul li.current a{text-decoration:underline;}
@@ -179,14 +204,14 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 /* ----------------------------------------------Content-------------------------------------*/
 
 .container{
-	padding:20px 0;
-	}
+    padding:20px 0;
+    }
 
 .content{
-	display:block;
-	float:left;
-	width:630px;
-	}
+    display:block;
+    float:left;
+    width:630px;
+    }
 
 /* ------Comments-----*/
 
@@ -214,321 +239,321 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
 /* ----------------------------------------------Column-------------------------------------*/
 
 .column{
-	display:block;
-	float:right;
-	width:300px;
-	}
+    display:block;
+    float:right;
+    width:300px;
+    }
 
 .column .holder, .column #featured{
-	display:block;
-	width:300px;
-	margin-bottom:20px;
-	}
+    display:block;
+    width:300px;
+    margin-bottom:20px;
+    }
 
 .column .holder h2.title{
-	display:block;
-	width:100%;
-	height:65px;
-	margin:0;
-	padding:15px 0 0 0;
-	font-size:20px;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
+    display:block;
+    width:100%;
+    height:65px;
+    margin:0;
+    padding:15px 0 0 0;
+    font-size:20px;
+    line-height:normal;
+    border-bottom:1px dotted #999999;
+    }
 
 .column .holder h2.title img{
-	float:left;
-	margin:-15px 8px 0 0;
-	padding:5px;
-	border:1px solid #999999;
-	}
+    float:left;
+    margin:-15px 8px 0 0;
+    padding:5px;
+    border:1px solid #999999;
+    }
 
 .column div.imgholder{
-	display:block;
-	width:290px;
-	margin:0 0 10px 0;
-	padding:4px;
-	border:1px solid #CCCCCC;
-	}
+    display:block;
+    width:290px;
+    margin:0 0 10px 0;
+    padding:4px;
+    border:1px solid #CCCCCC;
+    }
 
 .column .holder p.readmore{
-	display:block;
-	width:100%;
-	font-weight:bold;
-	text-align:right;
-	line-height:normal;
-	}
-	
+    display:block;
+    width:100%;
+    font-weight:bold;
+    text-align:right;
+    line-height:normal;
+    }
+    
 /* Featured Block */
 
 .column #featured ul, .column #featured h2, .column #featured p{
-	margin:0;
-	padding:0;
-	list-style:none;
-	color:#666666;
-	background-color:#F9F9F9;
-	}
+    margin:0;
+    padding:0;
+    list-style:none;
+    color:#666666;
+    background-color:#F9F9F9;
+    }
 
 .column #featured a{
-	color:#059BD8;
-	background-color:#F9F9F9;
-	}
+    color:#059BD8;
+    background-color:#F9F9F9;
+    }
 
 .column #featured li{
-	display:block;
-	width:250px;
-	margin:0;
-	padding:20px 25px;
-	color:#666666;
-	background-color:#F9F9F9;
-	}
+    display:block;
+    width:250px;
+    margin:0;
+    padding:20px 25px;
+    color:#666666;
+    background-color:#F9F9F9;
+    }
 
 .column #featured li p.imgholder{
-	display:block;
-	width:240px;
-	height:90px;
-	margin:20px 0 15px 0;
-	padding:4px;
-	border:1px solid #CCCCCC;
-	}
+    display:block;
+    width:240px;
+    height:90px;
+    margin:20px 0 15px 0;
+    padding:4px;
+    border:1px solid #CCCCCC;
+    }
 
 .column #featured li h2{
-	margin:0;
-	padding:0 0 8px 0;
-	font-weight:normal;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	line-height:normal;
-	border-bottom:1px dotted #999999;
-	}
+    margin:0;
+    padding:0 0 8px 0;
+    font-weight:normal;
+    font-family:Georgia, "Times New Roman", Times, serif;
+    line-height:normal;
+    border-bottom:1px dotted #999999;
+    }
 
 .column #featured p.readmore{
-	display:block;
-	width:100%;
-	margin-top:15px;
-	font-weight:bold;
-	text-align:right;
-	line-height:normal;
-	}
+    display:block;
+    width:100%;
+    margin-top:15px;
+    font-weight:bold;
+    text-align:right;
+    line-height:normal;
+    }
 
 .column .latestnews{
-	display:block;
-	width:100%;
-	margin:0;
-	padding:0;
-	list-style:none;
-	}
+    display:block;
+    width:100%;
+    margin:0;
+    padding:0;
+    list-style:none;
+    }
 
 .column .latestnews li{
-	display:block;
-	width:100%;
-	height:99px;
-	margin:0 0 11px 0;
-	padding:0 0 21px 0;
-	border-bottom:1px dotted #C7C5C8;
-	overflow:hidden;
-	}
+    display:block;
+    width:100%;
+    height:99px;
+    margin:0 0 11px 0;
+    padding:0 0 21px 0;
+    border-bottom:1px dotted #C7C5C8;
+    overflow:hidden;
+    }
 
 .column .latestnews li.last{
-	margin-bottom:0;
-	}
+    margin-bottom:0;
+    }
 
 .column .latestnews p{
-	display:inline;
-	}
+    display:inline;
+    }
 
 .column .latestnews img{
-	float:left;
-	margin:0 10px 0 0;
-	padding:4px;
-	border:1px solid #C7C5C8;
-	clear:left;
-	}
+    float:left;
+    margin:0 10px 0 0;
+    padding:4px;
+    border:1px solid #C7C5C8;
+    clear:left;
+    }
 
 /* ----------------------------------------------Homepage Specific-------------------------------------*/
 
 #adblock{
-	padding:20px 0;
-	}
+    padding:20px 0;
+    }
 
 #hpage_cats{
-	padding:0 0 5px 0;
-	}
+    padding:0 0 5px 0;
+    }
 
 #hpage_cats .fl_left, #hpage_cats .fl_right{
-	display:block;
-	width:468px;
-	margin-bottom:15px;
-	}
+    display:block;
+    width:468px;
+    margin-bottom:15px;
+    }
 
 #hpage_cats .fl_left img, #hpage_cats .fl_right img{
-	float:left;
-	margin:0 10px 0 0;
-	padding:4px;
-	border:1px solid #C7C5C8;
-	clear:left;
-	}
+    float:left;
+    margin:0 10px 0 0;
+    padding:4px;
+    border:1px solid #C7C5C8;
+    clear:left;
+    }
 
 #hpage_cats h2{
-	display:block;
-	width:100%;
-	margin:0 0 15px 0;
-	padding:5px 0;
-	color:#666666;
-	background-color:#EFEFEF;
-	text-align:right;
-	font-size:13px;
-	}
+    display:block;
+    width:100%;
+    margin:0 0 15px 0;
+    padding:5px 0;
+    color:#666666;
+    background-color:#EFEFEF;
+    text-align:right;
+    font-size:13px;
+    }
 
 #hpage_cats h2 a{
-	margin:0 5px 0 0;
-	color:#059BD8;
-	background-color:#EFEFEF;
-	font-weight:bold;
-	text-transform:uppercase;
-	}
+    margin:0 5px 0 0;
+    color:#059BD8;
+    background-color:#EFEFEF;
+    font-weight:bold;
+    text-transform:uppercase;
+    }
 
 #hpage_cats p{
-	margin:0 0 8px 0;
-	padding:0;
-	}
+    margin:0 0 8px 0;
+    padding:0;
+    }
 
 #hpage_latest{
-	display:block;
-	width:100%;
-	}
+    display:block;
+    width:100%;
+    }
 
 #hpage_latest h2{
-	margin:0 0 15px 0;
-	padding:0 0 8px 0;
-	border-bottom:2px solid #E3E3E3;
-	}
+    margin:0 0 15px 0;
+    padding:0 0 8px 0;
+    border-bottom:2px solid #E3E3E3;
+    }
 
 #hpage_latest ul{
-	margin:0;
-	padding:0;
-	list-style:none;
-	display:inline;
-	}
+    margin:0;
+    padding:0;
+    list-style:none;
+    display:inline;
+    }
 
 #hpage_latest li{
-	display:block;
-	float:left;
-	width:200px;
-	margin:0 15px 0 0;
-	padding:0;
-	}
+    display:block;
+    float:left;
+    width:200px;
+    margin:0 15px 0 0;
+    padding:0;
+    }
 
 #hpage_latest li.last{
-	margin-right:0;
-	}
+    margin-right:0;
+    }
 
 #hpage_latest img{
-	margin:0;
-	padding:4px;
-	border:1px solid #C7C5C8;
-	}
+    margin:0;
+    padding:4px;
+    border:1px solid #C7C5C8;
+    }
 
 #hpage_latest .readmore{
-	font-weight:bold;
-	text-align:right;
-	}
+    font-weight:bold;
+    text-align:right;
+    }
 
 /* ----------------------------------------------Footer-------------------------------------*/
 
 #footer{
-	padding:20px 0;
-	}
+    padding:20px 0;
+    }
 
 #footer h2, #footer p, #footer ul, #footer a{
-	margin:0;
-	padding:0;
-	font-weight:normal;
-	list-style:none;
-	line-height:normal;
-	}
+    margin:0;
+    padding:0;
+    font-weight:normal;
+    list-style:none;
+    line-height:normal;
+    }
 
 #footer h2{
-	color:#CCCCCC;
-	background-color:#FFFFFF;
-	font-size:18px;
-	font-weight:normal;
-	margin-bottom:10px;
-	padding-bottom:8px;
-	border-bottom:1px dotted #999999;
-	}
+    color:#CCCCCC;
+    background-color:#FFFFFF;
+    font-size:18px;
+    font-weight:normal;
+    margin-bottom:10px;
+    padding-bottom:8px;
+    border-bottom:1px dotted #999999;
+    }
 
 #footer li{
-	margin-bottom:5px;
-	}
+    margin-bottom:5px;
+    }
 
 #footer .footbox{
-	display:block;
-	float:left;
-	width:180px;
-	margin:0 15px 0 0;
-	padding:0;
-	}
+    display:block;
+    float:left;
+    width:180px;
+    margin:0 15px 0 0;
+    padding:0;
+    }
 
 #footer .last{
-	margin:0;
-	}
+    margin:0;
+    }
 
 /* ----------------------------------------------Social Bar With Newsletter-------------------------------------*/
 
 #socialise{
-	padding:20px 0;
-	}
+    padding:20px 0;
+    }
 
 #socialise ul{
-	display:inline;
-	margin:0;
-	padding:0;
-	list-style:none;
-	font-size:20px;
-	font-family:Georgia, "Times New Roman", Times, serif;
-	}
+    display:inline;
+    margin:0;
+    padding:0;
+    list-style:none;
+    font-size:20px;
+    font-family:Georgia, "Times New Roman", Times, serif;
+    }
 
 #socialise li{
-	display:block;
-	float:left;
-	margin:0 120px 0 0;
-	text-align:center;
-	}
+    display:block;
+    float:left;
+    margin:0 120px 0 0;
+    text-align:center;
+    }
 
 #socialise li span{
-	display:block;
-	margin:8px 0 0 0;
-	}
+    display:block;
+    margin:8px 0 0 0;
+    }
 
 #socialise li.last{
-	margin-right:0;
-	}
+    margin-right:0;
+    }
 
 #newsletter{
-	display:block;
-	float:right;
-	width:300px;
-	}
+    display:block;
+    float:right;
+    width:300px;
+    }
 
 #newsletter h2, #newsletter p{
-	margin:0;
-	padding:0;
-	line-height:normal;
-	}
+    margin:0;
+    padding:0;
+    line-height:normal;
+    }
 
 #newsletter h2{
-	margin-bottom:5px;
-	}
+    margin-bottom:5px;
+    }
 
 /* ----------------------------------------------Copyright-------------------------------------*/
 
 div.col8{border:none;}
 
 #copyright{
-	padding:15px 0;
-	}
+    padding:15px 0;
+    }
 
 #copyright p{
-	margin:0;
-	padding:0;
-	}
+    margin:0;
+    padding:0;
+    }
