--- a/ApexZero.com/Views/Home/Index.cshtml
+++ b/ApexZero.com/Views/Home/Index.cshtml
@@ -6,13 +6,12 @@
 }
 
 
-@if(ViewBag.Auth) {
-    @section menu {
-        <li>@Html.ActionLink("Home","Index","Home")</li>
-        <li class="last">@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
-    }
-} else {
-    @section menu {
-        <li class="last">@Html.ActionLink("Home","Index","Home")</li>
-    }
+@section menu {
+    <li>
+        Navigation
+        <ul>
+            <li>@Html.ActionLink("Home","Index","Home")</li>
+            <li>@Html.ActionLink("Psych133 Demo Page","Index","PsychOfSleep")</li>
+        </ul>
+    </li>
 }
