--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -4,41 +4,140 @@
 }
 
 @section featured_1 {
-    <img src="/Content/PsychOfSleep/images/demo/1.gif" alt="" />
+    <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
     <div class="panel-overlay">
-        <h2>Nullamlacus dui ipsum</h2>
-        <p>
-            Temperinte interdum sempus odio urna eget curabitur semper convallis nunc laoreet.<br />
-            <a href="#">Continue Reading &raquo;</a>
+        <h2>Sleep Deprivation Ages Brain</h2>
+        <p>New research shows that shortness of sleep speeds up the aging process of the brain.<br />
+        <a href="#">Continue Reading &raquo;</a>
         </p>
     </div>
 }
 
-@section latest_1 {
-    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
-    <p><strong><a href="#">Indonectetus facilis leo.</a></strong> Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque.</p>
+
+@section featured_2 {
+    <img src="/Content/PsychOfSleep/images/brain1.jpg" alt="" />
+    <div class="panel-overlay">
+        <h2>Lack of Sleep and False Memories</h2>
+        <p>New research shows that we are much more suceptible to "remembering" things that never acutally happened with lack of sleep.<br />
+        <a href="#">Continue Reading &raquo;</a>
+        </p>
+    </div>
+}
+
+@section featured_3 {
+    <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
+    <div class="panel-overlay">
+        <h2>How to Stay Awake In Class</h2>
+        <p>Do you often find yourself falling asleep in those early-afternoon classes? Learn some tips to avoid falling asleep.<br />
+        <a href="#">Continue Reading &raquo;</a>
+        </p>
+    </div>
+}
+
+@section featured_4 {
+    <img src="/Content/PsychOfSleep/images/headerphoto1.jpg" alt="" />
+    <div class="panel-overlay">
+        <h2>Sleep and your Immune System</h2>
+        <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
+        <a href="#">Continue Reading &raquo;</a>
+        </p>
+    </div>
+}
+
+@section featured_5 {
+    <img src="/Content/PsychOfSleep/images/alarm.jpg" alt="" />
+    <div class="panel-overlay">
+        <h2>Sleep and your Immune System</h2>
+        <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
+        <a href="#">Continue Reading &raquo;</a>
+        </p>
+    </div>
 }
 
 
+@section latest_2 {
+    <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
+    <p>
+    <strong><a href="#">Lose Weight While You Sleep!</a></strong>
+    Okay, not quite, but there are some pretty interesting links surfacing
+    regarding the amount of sleep you get and your waistline.
+    </p>
+}
+
+@section latest_1 {
+    <img src="/Content/PsychOfSleep/images/explode.jpg" alt="" />
+    <p><strong><a href="#">Exploding Head Symdrome</a></strong>
+    Just when you thought you'd heard of every possible sleep disorder around, 
+    this one takes the cake with its name alone!.</p>
+}
+
 @section art_top_left {
-    <h2><a href="#">Environment &raquo;</a></h2>
+    <h2><a href="#">Disorders&raquo;</a></h2>
     <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
-    <p><strong><a href="#">Indonectetus facilis leo.</a></strong></p>
+    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
+    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+}
+
+@section art_top_right {
+    <h2><a href="#">Wellness&raquo;</a></h2>
+    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
+    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+}
+
+@section art_bottom_left {
+    <h2><a href="#">Self Help&raquo;</a></h2>
+    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
+    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+}
+
+@section art_bottom_right {
+    <h2><a href="#">Etcetera&raquo;</a></h2>
+    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <p><strong><a href="#">Headline RE: Topic</a></strong></p>
     <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
 }
 
 @section sec_art_1 {
     <img src="/Content/PsychOfSleep/images/demo/190x130.gif" alt="" />
-    <p>Nullamlacus dui ipsum conseqlo borttis non euisque morbipen a sdapibulum orna.</p>
-    <p>Urnau ltrices quis curabitur pha sellent esque congue magnisve stib ulum quismodo nulla et.</p>
+    <p>I'm just gonna write something here 'cause I not sure what else should go here.</p>
+    <p>This is just something so I don't have non-english words everywhere.</p>
     <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
 }
 
 @section footnote_1 {
-    <li><a href="#">Lorem ipsum dolor</a></li>
-    <li><a href="#">Suspendisse in neque</a></li>
-    <li><a href="#">Praesent et eros</a></li>
-    <li><a href="#">Lorem ipsum dolor</a></li>
-    <li><a href="#">Suspendisse in neque</a></li>
-    <li class="last"><a href="#">Praesent et eros</a></li>
+    <li><a href="#">Footnote line 1</a></li>
+    <li><a href="#">line 2</a></li>
+    <li><a href="#">line 3</a></li>
+    <li><a href="#">line 4</a></li>
+    <li><a href="#">line 5</a></li>
+    <li class="last"><a href="#">footnote last line</a></li>
+}
+
+@section footnote_2 {
+    <li><a href="#">Footnote line 2</a></li>
+    <li><a href="#">line 2</a></li>
+    <li><a href="#">line 3</a></li>
+    <li><a href="#">line 4</a></li>
+    <li><a href="#">line 5</a></li>
+    <li class="last"><a href="#">footnote last line</a></li>
+}
+
+@section footnote_3 {
+    <li><a href="#">Footnote line 3</a></li>
+    <li><a href="#">line 2</a></li>
+    <li><a href="#">line 3</a></li>
+    <li><a href="#">line 4</a></li>
+    <li><a href="#">line 5</a></li>
+    <li class="last"><a href="#">footnote last line</a></li>
+}
+
+@section footnote_4 {
+    <li><a href="#">Footnote line 4</a></li>
+    <li><a href="#">line 2</a></li>
+    <li><a href="#">line 3</a></li>
+    <li><a href="#">line 4</a></li>
+    <li><a href="#">line 5</a></li>
+    <li class="last"><a href="#">footnote last line</a></li>
 }
