--- a/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
@@ -4,7 +4,8 @@
 
 @section nav {
     <li>@Html.ActionLink("Sleep Home","Index","PsychOfSleep")</li>
-    <li>@Html.ActionLink("Article Database","StyleDemo","PsychOfSleep")</li>
+    <li>@Html.ActionLink("Sleep Distraction Game","SleepGame","PsychOfSleep")</li>
+    <li>@Html.ActionLink("Full List of References","StyleDemo","PsychOfSleep")</li>
 }
 
 @section page_title {
