Added MSSQL database and updated site to use dynamic content sourced from the database now

--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -57,7 +57,7 @@
                 @RenderSection("art_top_right", false)
             </div>
             <br class="clear" />
-            <div class="fl_left">
+            <div class="fl_left">   
                 @RenderSection("art_bottom_left", false)
             </div>
             <div class="fl_right">
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="content">
                 <div id="hpage_latest">
-                    <h2>Some non-english words were here.</h2>
+                    <h2>Further readings.</h2>
                     <ul>
                         <li>
                             @RenderSection("sec_art_1", false)
@@ -93,6 +93,8 @@
             <br class="clear" />
         </div>
     </div>
+
+    <!--
     <div class="wrapper">
         <div id="footer">
             <div class="footbox">
@@ -128,4 +130,5 @@
             <br class="clear" />
         </div>
     </div>
+    -->
 }
