--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -7,19 +7,27 @@
     <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
     <div class="panel-overlay">
         <h2>Sleep Deprivation Ages Brain</h2>
-        <p>New research shows that shortness of sleep speeds up the aging process of the brain.<br />
-        <a href="#">Continue Reading &raquo;</a>
+        <p>
+            New research shows that shortness of sleep speeds up the aging 
+            process of the brain.<br />
+            <a href="http://www.medicalnewstoday.com/articles/279010.php">
+                Continue Reading &raquo;
+            </a>
         </p>
     </div>
 }
-
 
 @section featured_2 {
     <img src="/Content/PsychOfSleep/images/brain1.jpg" alt="" />
     <div class="panel-overlay">
         <h2>Lack of Sleep and False Memories</h2>
-        <p>New research shows that we are much more suceptible to "remembering" things that never acutally happened with lack of sleep.<br />
-        <a href="#">Continue Reading &raquo;</a>
+        <p> 
+            New research shows that we are much more suceptible to "remembering" 
+            things that never acutally happened with lack of sleep.
+            <br />
+            <a href="http://www.medicalnewstoday.com/articles/280152.php">
+                Continue Reading &raquo;
+            </a>
         </p>
     </div>
 }
@@ -28,8 +36,13 @@
     <img src="/Content/PsychOfSleep/images/wom.jpg" alt="" />
     <div class="panel-overlay">
         <h2>How to Stay Awake In Class</h2>
-        <p>Do you often find yourself falling asleep in those early-afternoon classes? Learn some tips to avoid falling asleep.<br />
-        <a href="#">Continue Reading &raquo;</a>
+        <p>
+            Do you often find yourself falling asleep in those early-afternoon 
+            classes? Learn some tips to avoid falling asleep.
+            <br />
+            <a href="http://greatist.com/happiness/boost-energy-midday">
+                Continue Reading &raquo;
+            </a>
         </p>
     </div>
 }
@@ -39,7 +52,7 @@
     <div class="panel-overlay">
         <h2>Sleep and your Immune System</h2>
         <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
-        <a href="#">Continue Reading &raquo;</a>
+        <a href="http://www.medicalnewstoday.com/releases/278191.php">Continue Reading &raquo;</a>
         </p>
     </div>
 }
@@ -49,95 +62,79 @@
     <div class="panel-overlay">
         <h2>Sleep and your Immune System</h2>
         <p>Beyond simply knowing that being sick leads to being more sleepy.<br />
-        <a href="#">Continue Reading &raquo;</a>
+        <a href="http://www.medicalnewstoday.com/releases/278191.php">Continue Reading &raquo;</a>
         </p>
     </div>
 }
 
-
 @section latest_2 {
     <img src="/Content/PsychOfSleep/images/sleepchart.jpg" alt="" />
     <p>
-    <strong><a href="#">Lose Weight While You Sleep!</a></strong>
-    Okay, not quite, but there are some pretty interesting links surfacing
-    regarding the amount of sleep you get and your waistline.
+        <strong><a href="http://www.medicalnewstoday.com/articles/277016.php">
+            Lose Weight While You Sleep!
+        </a></strong>
+        Okay, not quite, but there are some pretty interesting links 
+        surfacing regarding the amount of sleep you get and your waistline.
     </p>
 }
 
 @section latest_1 {
     <img src="/Content/PsychOfSleep/images/explode.jpg" alt="" />
-    <p><strong><a href="#">Exploding Head Symdrome</a></strong>
-    Just when you thought you'd heard of every possible sleep disorder around, 
-    this one takes the cake with its name alone!.</p>
+    <p><strong><a href="http://www.sleepassociation.org/?p=explodingheadsyndrome">
+        Exploding Head Symdrome
+    </a></strong>
+        Just when you thought you'd heard of every possible sleep disorder around, 
+        this one takes the cake with its name alone!.
+    </p>
 }
 
 @section art_top_left {
     <h2><a href="#">Disorders&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <img src="/Content/PsychOfSleep/images/zzz.jpg" alt="" />
     <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+    <p>Some content would go here.</p>
 }
 
 @section art_top_right {
     <h2><a href="#">Wellness&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <img src="/Content/PsychOfSleep/images/gn.jpg" alt="" />
     <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+    <p>Some content would go here.</p>
 }
 
 @section art_bottom_left {
     <h2><a href="#">Self Help&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <img src="/Content/PsychOfSleep/images/help.jpg" alt="" />
     <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+    <p>Some content would go here.</p>
 }
 
 @section art_bottom_right {
     <h2><a href="#">Etcetera&raquo;</a></h2>
-    <img src="/Content/PsychOfSleep/images/demo/100x100.gif" alt="" />
+    <img src="/Content/PsychOfSleep/images/etc.jpg" alt="" />
     <p><strong><a href="#">Headline RE: Topic</a></strong></p>
-    <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>. Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan sagittislaorem dolor sum at urna.</p>
+    <p>Some content would go here.</p>
 }
 
 @section sec_art_1 {
-    <img src="/Content/PsychOfSleep/images/demo/190x130.gif" alt="" />
-    <p>I'm just gonna write something here 'cause I not sure what else should go here.</p>
-    <p>This is just something so I don't have non-english words everywhere.</p>
-    <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
+    <img src="/Content/PsychOfSleep/images/stewie.jpg" alt="" />
+    <p>Are babbies who wake in the middle of the night to breastfeed actually</p>
+    <p>trying to delay the birth of a sibling???</p>
+    <p class="readmore">
+        <a href="http://www.medicalnewstoday.com/releases/275341.php">
+            Continue Reading &raquo;
+        </a>
+    </p>
 }
 
 @section footnote_1 {
-    <li><a href="#">Footnote line 1</a></li>
-    <li><a href="#">line 2</a></li>
-    <li><a href="#">line 3</a></li>
-    <li><a href="#">line 4</a></li>
-    <li><a href="#">line 5</a></li>
-    <li class="last"><a href="#">footnote last line</a></li>
 }
 
 @section footnote_2 {
-    <li><a href="#">Footnote line 2</a></li>
-    <li><a href="#">line 2</a></li>
-    <li><a href="#">line 3</a></li>
-    <li><a href="#">line 4</a></li>
-    <li><a href="#">line 5</a></li>
-    <li class="last"><a href="#">footnote last line</a></li>
 }
 
 @section footnote_3 {
-    <li><a href="#">Footnote line 3</a></li>
-    <li><a href="#">line 2</a></li>
-    <li><a href="#">line 3</a></li>
-    <li><a href="#">line 4</a></li>
-    <li><a href="#">line 5</a></li>
-    <li class="last"><a href="#">footnote last line</a></li>
 }
 
 @section footnote_4 {
-    <li><a href="#">Footnote line 4</a></li>
-    <li><a href="#">line 2</a></li>
-    <li><a href="#">line 3</a></li>
-    <li><a href="#">line 4</a></li>
-    <li><a href="#">line 5</a></li>
-    <li class="last"><a href="#">footnote last line</a></li>
 }
