--- a/ApexZero.com/Content/PsychOfSleep/styles/layout.css
+++ b/ApexZero.com/Content/PsychOfSleep/styles/layout.css
@@ -8,7 +8,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 
 @import url(navi.css);
 @import url(forms.css);
-@import url(tables.css);
+/* @import url(tables.css); */
 @import url(featured_slide.css);
 
 body{
@@ -48,7 +48,7 @@ div.wrapper{
     border-bottom:1px solid #E3E3E3;
     }
 
-div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{
+div.f h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wrapper h6{
     margin:0 0 15px 0;
     padding:0;
     font-size:20px;
@@ -119,8 +119,8 @@ div.wrapper h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, 
     display:block;
     position:absolute;
     width:200px;
-    left:89.8%;
-    top:135%;
+    left:89.4%;
+    top:130%;
     z-index:2;
 }
 
@@ -575,10 +575,32 @@ div.col8{border:none;}
 table.grxd {
     width:100%;
     height:100%;
+    color:transparent;
 }
 
 table>td {
-    border: 2px dotted;
     margin:0;
     padding:0;
+}
+
+.canvas {
+    display: none;
+    cursor: pointer;
+}
+
+.notify {
+    margin-left: 20px;
+    min-height: 20px;
+    background: #07a400;
+    border: 1px solid #006508;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 3px;
+    color: #FFFFFF;
+    display: none;
+}
+
+.pic1 {
+    position: absolute;
 }
