--- a/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
@@ -8,124 +8,45 @@
 <div class="wrapper">
   <div class="container">
     <div class="content">
-      <h1>&lt;h1&gt; to &lt;h6&gt; - Headline Colour and Size Are All The Same</h1>
-      <img class="imgr" src="images/demo/imgr.gif" alt="" width="125" height="125" />
-      <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
-      <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
-      <img class="imgl" src="images/demo/imgl.gif" alt="" width="125" height="125" />
-      <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>.</p>
-      <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
-      <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-      <h2>Table(s)</h2>
-      <table summary="Summary Here" cellpadding="0" cellspacing="0">
-        <thead>
-          <tr>
-            <th>Header 1</th>
-            <th>Header 2</th>
-            <th>Header 3</th>
-            <th>Header 4</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr class="light">
-            <td>Value 1</td>
-            <td>Value 2</td>
-            <td>Value 3</td>
-            <td>Value 4</td>
-          </tr>
-          <tr class="dark">
-            <td>Value 5</td>
-            <td>Value 6</td>
-            <td>Value 7</td>
-            <td>Value 8</td>
-          </tr>
-          <tr class="light">
-            <td>Value 9</td>
-            <td>Value 10</td>
-            <td>Value 11</td>
-            <td>Value 12</td>
-          </tr>
-          <tr class="dark">
-            <td>Value 13</td>
-            <td>Value 14</td>
-            <td>Value 15</td>
-            <td>Value 16</td>
-          </tr>
-        </tbody>
-      </table>
-      <div id="comments">
-        <h2>Comments</h2>
-        <ul class="commentlist">
-          <li class="comment_odd">
-            <div class="author"><img class="avatar" src="images/demo/avatar.gif" width="32" height="32" alt="" /><span class="name"><a href="#">A Name</a></span> <span class="wrote">wrote:</span></div>
-            <div class="submitdate"><a href="#">August 4, 2009 at 8:35 am</a></div>
-            <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-          </li>
-          <li class="comment_even">
-            <div class="author"><img class="avatar" src="images/demo/avatar.gif" width="32" height="32" alt="" /><span class="name"><a href="#">A Name</a></span> <span class="wrote">wrote:</span></div>
-            <div class="submitdate"><a href="#">August 4, 2009 at 8:35 am</a></div>
-            <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-          </li>
-          <li class="comment_odd">
-            <div class="author"><img class="avatar" src="images/demo/avatar.gif" width="32" height="32" alt="" /><span class="name"><a href="#">A Name</a></span> <span class="wrote">wrote:</span></div>
-            <div class="submitdate"><a href="#">August 4, 2009 at 8:35 am</a></div>
-            <p>This is an example of a comment made on a post. You can either edit the comment, delete the comment or reply to the comment. Use this as a place to respond to the post or to share what you are thinking.</p>
-          </li>
-        </ul>
-      </div>
-      <h2>Write A Comment</h2>
-      <div id="respond">
-        <form action="#" method="post">
-          <p>
-            <input type="text" name="name" id="name" value="" size="22" />
-            <label for="name"><small>Name (required)</small></label>
-          </p>
-          <p>
-            <input type="text" name="email" id="email" value="" size="22" />
-            <label for="email"><small>Mail (required)</small></label>
-          </p>
-          <p>
-            <textarea name="comment" id="comment" cols="100%" rows="10"></textarea>
-            <label for="comment" style="display:none;"><small>Comment (required)</small></label>
-          </p>
-          <p>
-            <input name="submit" type="submit" id="submit" value="Submit Form" />
-            &nbsp;
-            <input name="reset" type="reset" id="reset" tabindex="5" value="Reset Form" />
-          </p>
-        </form>
-      </div>
+
+        @Html.Raw(ViewBag.RequestedContent)
+
+        <!-- 
+        <h1>This is the article title</h1>
+        <img class="imgr" src="images/demo/imgr.gif" alt="" width="125" height="125" />
+        <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
+        <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
+        <img class="imgl" src="images/demo/imgl.gif" alt="" width="125" height="125" />
+        <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>.</p>
+        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
+        <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
+        -->
+
     </div>
+
+
+
     <div class="column">
       <div class="subnav">
-        <h2>Secondary Navigation</h2>
+        <h2>Article Navigation</h2>
         <ul>
-          <li><a href="#">Open Source Templates</a></li>
-          <li><a href="#">Free CSS Templates</a>
-            <ul>
-              <li><a href="#">Free XHTML Templates</a></li>
-              <li><a href="#">Free Website Templates</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Open Source Layouts</a>
-            <ul>
-              <li><a href="#">Open Source Software</a></li>
-              <li><a href="#">Open Source Webdesign</a>
-                <ul>
-                  <li><a href="#">Open Source Downloads</a></li>
-                  <li><a href="#">Open Source Website</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a href="#">Open Source Themes</a></li>
+          <li>@Html.ActionLink(
+                "Back to list of articles", "StyleDemo", "PsychOfSleep", 
+                new { articleId = "-1" }, null
+           )</li>
         </ul>
       </div>
+
+
+      <!--
       <div class="holder">
         <h2 class="title"><img src="images/demo/60x60.gif" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
         <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </div>
+      
+
+
       <div id="featured">
         <ul>
           <li>
@@ -146,18 +67,11 @@
         </ul>
         <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed. Condimentumsantincidunt dui mattis magna intesque purus orci augue lor nibh.</p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-      </div>
+                              -->
+
+      
     </div>
     <br class="clear" />
   </div>
 </div>
-<!-- ####################################################################################################### 
-<div class="wrapper">
-  <div id="adblock">
-    <div class="fl_left"><a href="#"><img src="images/demo/468x60.gif" alt="" /></a></div>
-    <div class="fl_right"><a href="#"><img src="images/demo/468x60.gif" alt="" /></a></div>
-    <br class="clear" />
-  </div>
-</div>
-    -->
 }
