--- a/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/StyleDemo.cshtml
@@ -7,71 +7,11 @@
 
 <div class="wrapper">
   <div class="container">
-    <div class="content">
-
-        @Html.Raw(ViewBag.RequestedContent)
-
-        <!-- 
-        <h1>This is the article title</h1>
-        <img class="imgr" src="images/demo/imgr.gif" alt="" width="125" height="125" />
-        <p>Aliquatjusto quisque nam consequat doloreet vest orna partur scetur portortis nam. Metadipiscing eget facilis elit sagittis felisi eger id justo maurisus convallicitur.</p>
-        <p>Dapiensociis <a href="#">temper donec auctortortis cumsan</a> et curabitur condis lorem loborttis leo. Ipsumcommodo libero nunc at in velis tincidunt pellentum tincidunt vel lorem.</p>
-        <img class="imgl" src="images/demo/imgl.gif" alt="" width="125" height="125" />
-        <p>This is a W3C compliant free website template from <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>.</p>
-        <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
-        <p>Portortornec condimenterdum eget consectetuer condis consequam pretium pellus sed mauris enim. Puruselit mauris nulla hendimentesque elit semper nam a sapien urna sempus.</p>
-        -->
-
-    </div>
-
-
-
-    <div class="column">
-      <div class="subnav">
-        <h2>Article Navigation</h2>
-        <ul>
-          <li>@Html.ActionLink(
-                "Back to list of articles", "StyleDemo", "PsychOfSleep", 
-                new { articleId = "-1" }, null
-           )</li>
-        </ul>
-      </div>
-
-
-      <!--
-      <div class="holder">
-        <h2 class="title"><img src="images/demo/60x60.gif" alt="" />Nullamlacus dui ipsum conseque loborttis</h2>
-        <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque.</p>
-        <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-      </div>
-      
-
-
-      <div id="featured">
-        <ul>
-          <li>
-            <h2>Indonectetus facilis leonib</h2>
-            <p class="imgholder"><img src="images/demo/240x90.gif" alt="" /></p>
-            <p>Nullamlacus dui ipsum conseque loborttis non euisque morbi penas dapibulum orna. Urnaultrices quis curabitur phasellentesque congue magnis vestibulum quismodo nulla et feugiat. Adipisciniapellentum leo ut consequam ris felit elit id nibh sociis malesuada.</p>
-            <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-          </li>
-        </ul>
-      </div>
-      <div class="holder">
-        <h2>Lorem ipsum dolor</h2>
-        <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed.</p>
-        <ul>
-          <li><a href="#">Lorem ipsum dolor sit</a></li>
-          <li>Etiam vel sapien et</li>
-          <li><a href="#">Etiam vel sapien et</a></li>
-        </ul>
-        <p>Nuncsed sed conseque a at quismodo tris mauristibus sed habiturpiscinia sed. Condimentumsantincidunt dui mattis magna intesque purus orci augue lor nibh.</p>
-        <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-                              -->
-
-      
+        <div class="transbox">
+            <h1>@Html.Raw(ViewBag.articleTitle)</h1>
+            <p>@Html.Raw(ViewBag.articleBody)</p>
+        </div>
     </div>
     <br class="clear" />
-  </div>
 </div>
 }
