Finished style changes. Ready to finish adding content

--- a/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/IndexLayout.cshtml
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="content">
                 <div id="hpage_latest">
-                    <h2>Further readings.</h2>
+                    <h2>Don't leave without checking out...</h2>
                     <ul>
                         <li>
                             @RenderSection("sec_art_1", false)
