--- a/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/SubLayout.cshtml
@@ -14,7 +14,7 @@
 @section page_title {
     @if(!IsSectionDefined("page_title_override")) { 
         <h1><a href="@Url.Action("Index", "PsychOfSleep", "PsychOfSleep")"><strong>P</strong>sych of <strong>S</strong>leep</a></h1>
-        <p>Useful sleep information for your everyday life.</p>
+        <p>Tips, tricks, and new research for the sleep nerd in all of us!</p>
     }
     @RenderSection("page_title_override", false)
 }
