--- a/ApexZero.com/Views/Shared/_Layout.cshtml
+++ b/ApexZero.com/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <div class="wrapper col8">
         <div id="copyright">
             <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Apex Zero</a></p>
-            <p class="fl_right">Base CSS Template by <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+            <p class="fl_right">CSS Template Modified from base <a href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
             <br class="clear" />
         </div>
     </div>
