--- a/ApexZero.com/Content/PsychOfSleep/styles/layout.css
+++ b/ApexZero.com/Content/PsychOfSleep/styles/layout.css
@@ -17,13 +17,12 @@ html {
 }
 
 body {
-    margin:0;
     padding:0;
     font-size:13px;
     font-family:Georgia, "Times New Roman", Times, serif;
     color:#666666;
     background: url(/Content/PsychOfSleep/images/back_pattern2.png) repeat;
-    width:77%;
+    width:84.6%;
     position: relative;
     margin: auto;
     min-height: 100%;
@@ -67,7 +66,7 @@ div.f h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wr
     position:relative;
     margin: 0 auto 0;
     display:block;
-    width:960px;
+    width:90%;
 }
 
 #topline {
@@ -78,6 +77,7 @@ div.f h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wr
     float:left;
     margin:0;
     padding:0;
+    font-weight: bold;
 }
 
 #topline ul {
@@ -89,6 +89,7 @@ div.f h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wr
     list-style:none;
     box-shadow: 0 0 5px rgba(0,0,0,0.15);
     border:none;
+    font-weight: bold;
 }
 
 #topline ul li {
@@ -372,60 +373,59 @@ div.f h1, div.wrapper h2, div.wrapper h3, div.wrapper h4, div.wrapper h5, div.wr
     padding:0;
 }
 
-#hpage_latest{
+#hpage_latest {
     display:block;
-    width:100%;
+    width:120%;
 }
 
-#hpage_latest h2{
+
+#hpage_latest h2 {
     margin:0 0 15px 0;
     padding:0 0 8px 0;
     border-bottom:2px solid #E3E3E3;
 }
 
-#hpage_latest ul{
+#hpage_latest ul {
     margin:0;
     padding:0;
     list-style:none;
     display:inline;
 }
 
-#hpage_latest li{
+#hpage_latest li {
     display:block;
-    float:left;
-    width:200px;
+    width: 310px;
     margin:0 15px 0 0;
-    padding:0;
+    padding:20px;
+    float:left;
 }
 
-#hpage_latest li.last{
+#hpage_latest li.last {
     margin-right:0;
-    }
+}
 
-#hpage_latest img{
-    margin:0;
+#hpage_latest img {
+    margin:0px;
     padding:4px;
     border:1px solid #C7C5C8;
-    }
+}
 
-#hpage_latest .readmore{
+#hpage_latest .readmore {
     font-weight:bold;
     text-align:right;
-    }
-
-/* ----------------------------------------------Footer-------------------------------------*/
+}
 
 #footer{
     padding:20px 0;
-    }
+}
 
-#footer h2, #footer p, #footer ul, #footer a{
+#footer h2, #footer p, #footer ul, #footer a {
     margin:0;
     padding:0;
     font-weight:normal;
     list-style:none;
     line-height:normal;
-    }
+}
 
 #footer h2{
     color:#CCCCCC;
@@ -520,7 +520,7 @@ div.col8{border:none;}
     background: #CCCCCC;
     text-align: center;
     border: 1px solid #666666;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     border-radius: 10px;
 }
 
@@ -541,14 +541,13 @@ table.grxd {
 }
 
 div.transbox {
-    background-color:rgba(255,255,255,0.2);
+    background-color: rgba(255,255,255,0.2);
     border: 1px solid #CCCCCC;
     opacity: 1;
     width: 100%;
     margin: auto -12px;
-    padding:10px;
+    padding: 10px;
 }
-
 
 table>td {
     margin:0;
@@ -557,24 +556,29 @@ table>td {
 
 .canvas {
     display: none;
-    cursor: pointer; /*
+    cursor: pointer;
     user-select: none;
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select:none;
-    -moz-user-select: none;*/
+    -moz-user-select: none;
+}
+
+.canvas img {
+    position: absolute;
 }
 
 #notify {
     border-radius: 15px;
     min-height: 20px;
     min-width:1000px;
+    max-width: 1000px;
     background: #CCCCCC;
     border: 1px solid #006508;
     text-align: left;
     margin-bottom: 20px;
     margin-top: 20px;
-    margin-left: -30px;
+    margin-left: 10px;
     padding: 15px;
     color: black;
     display:none;
