--- a/ApexZero.com/Views/PsychOfSleep/index.cshtml
+++ b/ApexZero.com/Views/PsychOfSleep/index.cshtml
@@ -116,7 +116,7 @@
     <p>Some content would go here.</p>
 }
 
-@section sec_art_1 {
+@section latest_3 {
     <img src="/Content/PsychOfSleep/images/stewie.jpg" alt="" />
     <p>Are babbies who wake in the middle of the night to breastfeed actually</p>
     <p>trying to delay the birth of a sibling???</p>
@@ -125,4 +125,22 @@
             Continue Reading &raquo;
         </a>
     </p>
+}
+
+@section sec_art_1 {
+    <p><strong>Play the sleep game!</strong></p>
+    <p>Many of us are not aware of all the distracting elements we have in our
+    bedrooms that can prevent us from getting a good night's sleep.
+    Click the image below and see if you can identify all the common bedroom
+    items that may be impacting the quality of your sleep.</p>
+    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
+}
+
+@section sec_art_2 {
+    <p><strong>See the full list of available articles.</strong></p>
+    <p>
+        In case you missed any of the articles posted here or just want to have
+        a quick reference, see a full list of articles by clicking the image below.<p>
+    </p>
+    <a href="/PsychOfSleep/SleepGame"><img src="/Content/PsychOfSleep/images/ss5.jpg" alt="" /></a>
 }
